# persistent-generic-filter

./: .gitignore  CHANGELOG.md  Main.hs  README.md  default.nix  haskell-generics-persistent.cabal  haskell-generics-persistent.nix  persistent-generic-filter.cabal  persistent-generic-filter.nix  pkgs.nix  shell.nix  stack.yaml
lib/: FilterQueryLib.hs  Main.hs
