cabal-version:       >=1.10

name:                persistent-generic-filter
version:             0.1.0.0
license-file:        LICENSE
author:              Jacek Galowicz
maintainer:          jacek.galowicz@cyberus-technology.de
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable persistent-generic-filter
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , containers
                     , esqueleto
                     , parsec
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , text
  default-language:    Haskell2010
